--- a/GermanTextClassification.ipynb
+++ b/GermanTextClassification.ipynb
@@ -891,7 +891,7 @@
    "id": "f9ad426f",
    "metadata": {},
    "source": [
-    "** I also trained the given dataset on other models but in that i haven't analyse the accuracy and F1 score for each class but in that i choose different learning rate for the models. I tried the HyperParameter tunning but got some issues with that and right now I am training the Long range model. Till next meeting it will be ready."
+    "** I also trained the given dataset on other models but in that i haven't analyse the accuracy and F1 score for each class but in that i choose different learning rate for the models."
    ]
   },
   {
